Created and used Video parent class and TVShow child class

--- a/fresh_tomatoes.html
+++ b/fresh_tomatoes.html
@@ -119,6 +119,11 @@
     <h2>Lord of the Rings - Fellowship of the Ring</h2>
 </div>
 
+<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="D1NDNFZGY7k" data-toggle="modal" data-target="#trailer">
+    <img src="https://borgdotcom.files.wordpress.com/2011/09/new-girl-banner.jpg?w=640" width="220" height="342">
+    <h2>New Girl</h2>
+</div>
+
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="VfGSCaSmKTM" data-toggle="modal" data-target="#trailer">
     <img src="http://ftpmirror.your.org/pub/wikimedia/images/wikipedia/sr/9/9d/Weweresoldiers_poster.jpg" width="220" height="342">
     <h2>We Were Soldiers</h2>
@@ -132,6 +137,16 @@
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="5guMumPFBag" data-toggle="modal" data-target="#trailer">
     <img src="https://images-na.ssl-images-amazon.com/images/I/51oN05yMs3L.jpg" width="220" height="342">
     <h2>Pacific Rim</h2>
+</div>
+
+<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="5uThxAizA3o" data-toggle="modal" data-target="#trailer">
+    <img src="http://media.cleveland.com/ent_impact_movies/photo/parksandrecreationax046-261c-9jpg-b4a6ce89719e0e21.jpg" width="220" height="342">
+    <h2>Parks and Rec</h2>
+</div>
+
+<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="EkHTPHQKFPo" data-toggle="modal" data-target="#trailer">
+    <img src="https://cdn.slidesharecdn.com/ss_thumbnails/breakingbadpilotscriptforeducationalpurposes-141112024044-conversion-gate01-thumbnail-4.jpg?cb=1415760297" width="220" height="342">
+    <h2>Breaking Bad</h2>
 </div>
 
     </div>
